[package]
name = "tracing-xray"
version = "0.1.0"
authors = ["Nevins"]
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing = "^0.1"
tracing-subscriber = "^0.3"
rand = "^0.8"
